@@ -41,6 +41,8 @@ jks.password = jspwiki
 #
 tomcat.admin = admin
 tomcat.password = greyroot
+tomcat.host = localhost
+tomcat.port = 8080
 
 #
 #  JDBC testing properties
