@@ -4,7 +4,7 @@ public class CustomJDBCTest extends CommonCustomTests
 {
     public CustomJDBCTest( String s )
     {
-        super( s, "http://localhost:8080/test-custom-jdbc/" );
+        super( s, "test-custom-jdbc/" );
     }
 
 }
